--- a/src/index.html
+++ b/src/index.html
@@ -208,7 +208,7 @@
       <div
         cdata-aos="fade-in"
         data-aos-delay="1500"
-        class="flex flex-col w-full md:w-5/12 ml-20"
+        class="flex flex-col w-full md:w-5/12 md:ml-20"
       >
         <h1 class="font-[fcb-condensed-bold] text-white text-3xl md:text-5xl">
           ABOUT THE PROJECT
@@ -254,7 +254,7 @@
         <video
           class="w-full rounded-xl"
           controls
-          poster="images/Espai_Barca_Intro.png"
+          poster="Images/Espai_Barca_Intro.png"
         >
           <source src="Images/Espai_Barca.mp4" type="video/mp4" />
         </video>
@@ -364,13 +364,13 @@
       <div
         cdata-aos="fade-in"
         data-aos-delay="1500"
-        class="flex flex-col w-full md:w-5/12"
+        class="flex flex-col w-full md:w-5/12 md:ml-20"
       >
-        <h1 class="ml-20 font-bold text-white text-5xl md:text-8xl">
+        <h1 class="font-bold text-white text-5xl md:text-8xl">
           A NEW EXPERIENCE
         </h1>
 
-        <p class="ml-20 font-regular text-md md:text-xl text-white mt-12">
+        <p class="font-regular text-md md:text-xl text-white mt-12">
           New ways to experience, feel, and live unforgettable moments. A
           technological revolution, creating new spaces, environments, and
           assets that generate additional revenues with a revamped Barça
@@ -414,14 +414,14 @@
       <div
         cdata-aos="fade-in"
         data-aos-delay="1500"
-        class="flex flex-col w-full md:w-5/12"
+        class="flex flex-col w-full md:w-5/12 md:ml-20"
       >
-        <h1 class="ml-20 font-bold text-white text-5xl md:text-8xl">
+        <h1 class="font-bold text-white text-5xl md:text-8xl">
           INTEGRATION <br />WITH OUR <br />
           SURROUNDINGS
         </h1>
 
-        <p class="ml-20 font-regular text-md md:text-xl text-white mt-12">
+        <p class="font-regular text-md md:text-xl text-white mt-12">
           Integration with the neighborhood and the city is one of the
           fundamental pillars, with a completely sustainable and environmentally
           respectful space.
@@ -437,15 +437,15 @@
       <div
         cdata-aos="fade-in"
         data-aos-delay="1500"
-        class="flex flex-col w-full md:w-5/12"
+        class="flex flex-col w-full md:w-5/12 md:ml-20"
       >
-        <h1 class="ml-20 font-bold text-white text-5xl md:text-8xl">
+        <h1 class="font-bold text-white text-5xl md:text-8xl">
           A PIONEERING <br />
           SUSTAINABILITY <br />
           PROJECT
         </h1>
 
-        <p class="ml-20 font-regular text-md md:text-xl text-white mt-12">
+        <p class="font-regular text-md md:text-xl text-white mt-12">
           Implementation of green areas to protect biodiversity and people's
           health, renewable and self-sufficient energy systems, water
           consumption reduction, and a construction project based on the
@@ -828,7 +828,7 @@
       // below listed default settings
       AOS.init({
         offset: 50, // offset (in px) from the original trigger point
-        duration: 2000, // values from 0 to 3000, with step 50ms
+        duration: 3000, // values from 0 to 3000, with step 50ms
       });
     </script>
   </body>
