--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,6 @@
       src="https://kit.fontawesome.com/4e1f632ed1.js"
       crossorigin="anonymous"
     ></script>
-    <script src="script.js"></script>
   </head>
 
   <body class="bg-black overflow-x-hidden">
@@ -286,14 +285,13 @@
             <h2 class="font-bold text-white text-lg md:text-2xl mb-3">
               SPOTIFY CAMP NOU
             </h2>
-            <a
+            <button
               data-aos="fade-right"
-              href="#"
-              target="_blank"
+              onClick="firstImage()"
               class="font-semibold text-base md:text-lg px-4 py-2 bg-transparent border-2 border-white text-white rounded-lg hover:bg-white/10 transition-colors duration-300 w-full text-center"
             >
-              Learn More
-            </a>
+              View →
+            </button>
           </div>
           <div
             class="flex flex-col items-stretch bg-black/50 rounded-2xl p-6 min-w-[220px] w-full max-w-xs shadow-lg"
@@ -301,14 +299,13 @@
             <h2 class="font-bold text-white text-lg md:text-2xl mb-3">
               NOU PALAU BLAUGRANA
             </h2>
-            <a
+            <button
               data-aos="fade-right"
-              href="#"
-              target="_blank"
+              onClick="secondImage()"
               class="font-semibold text-base md:text-lg px-4 py-2 bg-transparent border-2 border-white text-white rounded-lg hover:bg-white/10 transition-colors duration-300 w-full text-center"
             >
-              Learn More
-            </a>
+              View →
+            </button>
           </div>
           <div
             class="flex flex-col items-stretch bg-black/50 rounded-2xl p-6 min-w-[220px] w-full max-w-xs shadow-lg"
@@ -316,14 +313,13 @@
             <h2 class="font-bold text-white text-lg md:text-2xl mb-3">
               CAMPUS BARCA
             </h2>
-            <a
+            <button
               data-aos="fade-right"
-              href="#"
-              target="_blank"
+              onClick="thirdImage()"
               class="font-semibold text-base md:text-lg px-4 py-2 bg-transparent border-2 border-white text-white rounded-lg hover:bg-white/10 transition-colors duration-300 w-full text-center"
             >
-              Learn More
-            </a>
+              View →
+            </button>
           </div>
           <div
             class="flex flex-col items-stretch bg-black/50 rounded-2xl p-6 min-w-[220px] w-full max-w-xs shadow-lg"
@@ -331,14 +327,13 @@
             <h2 class="font-bold text-white text-lg md:text-2xl mb-3">
               ESTADI JOHAN CRUYFF
             </h2>
-            <a
+            <button
               data-aos="fade-right"
-              href="#"
-              target="_blank"
+              onClick="fourthImage()"
               class="font-semibold text-base md:text-lg px-4 py-2 bg-transparent border-2 border-white text-white rounded-lg hover:bg-white/10 transition-colors duration-300 w-full text-center"
             >
-              Learn More
-            </a>
+              View →
+            </button>
           </div>
         </div>
       </div>
@@ -349,6 +344,7 @@
         class="w-full md:w-6/12 mt-8 md:mt-0"
       >
         <img
+          id="imageID"
           src="Images/spotify-camp-nou.png"
           alt="spotify camp nou"
           class="w-full rounded-xl"
@@ -812,17 +808,6 @@
 
     <script>
       // Mobile menu toggle
-      const hamburgerBtn = document.getElementById("hamburger-btn");
-      const mobileMenuPanel = document.getElementById("mobile-menu-panel");
-      const closeMobileMenu = document.getElementById("close-mobile-menu");
-      if (hamburgerBtn && mobileMenuPanel && closeMobileMenu) {
-        hamburgerBtn.addEventListener("click", () => {
-          mobileMenuPanel.classList.remove("translate-x-full");
-        });
-        closeMobileMenu.addEventListener("click", () => {
-          mobileMenuPanel.classList.add("translate-x-full");
-        });
-      }
 
       // You can also pass an optional settings object
       // below listed default settings
@@ -831,5 +816,6 @@
         duration: 3000, // values from 0 to 3000, with step 50ms
       });
     </script>
+    <script src="script.js"></script>
   </body>
 </html>
