--- a/src/index.html
+++ b/src/index.html
@@ -413,8 +413,7 @@
         class="flex flex-col w-full md:w-5/12 md:ml-20"
       >
         <h1 class="font-bold text-white text-5xl md:text-8xl">
-          INTEGRATION <br />WITH OUR <br />
-          SURROUNDINGS
+          INTEGRATION WITH OUR SURROUNDINGS
         </h1>
 
         <p class="font-regular text-md md:text-xl text-white mt-12">
@@ -436,9 +435,7 @@
         class="flex flex-col w-full md:w-5/12 md:ml-20"
       >
         <h1 class="font-bold text-white text-5xl md:text-8xl">
-          A PIONEERING <br />
-          SUSTAINABILITY <br />
-          PROJECT
+          A PIONEERING SUSTAINABILITY PROJECT
         </h1>
 
         <p class="font-regular text-md md:text-xl text-white mt-12">
@@ -596,18 +593,20 @@
       </div>
     </section>
     <!--contact section start-->
-    <section></section>
+    <section id="contact"></section>
     <section
       data-aos="fade-in"
       id="contact"
       class="min-h-screen bg-black py-24"
     >
       <div
-        class="bg bg-gradient-to-l from-blue-600 to-red-500 rounded-4xl m-12"
+        class="bg bg-gradient-to-l from-blue-600 to-red-500 rounded-4xl mx-4 sm:m-12"
       >
-        <div class="flex flex-row justify-between">
-          <div class="flex flex-col items-center m-4">
-            <h1 class="font-bold text-white text-5xl md:text-8xl p-8 m-8">
+        <div class="flex flex-col md:flex-row justify-between p-4">
+          <div class="flex flex-col items-center md:items-start m-4">
+            <h1
+              class="font-bold text-white text-4xl md:text-8xl p-4 sm:p-8 m-4 sm:m-8 text-center md:text-left"
+            >
               WE LISTEN TO YOU
             </h1>
             <h2 class="font-regular text-white text-1xl md:text-4xl p-8 mb-20">
@@ -625,8 +624,11 @@
               </div>
             </a>
           </div>
-          <div class="flex flex-end">
-            <img src="Images/fcbarcelona-logo-color.svg" />
+          <div class="hidden md:flex flex-end">
+            <img
+              src="Images/fcbarcelona-logo-color.svg"
+              alt="FC Barcelona Logo"
+            />
           </div>
         </div>
       </div>
