--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
   <head>
-    <meta http-equiv="refresh" content="0;URL=Espai-Barca/src/index.html" />
+    <meta http-equiv="refresh" content="0;URL=/src/index.html" />
   </head>
 </html>
