--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
   <head>
-    <meta http-equiv="refresh" content="0;URL=/src/index.html" />
+    <meta
+      http-equiv="refresh"
+      content="0;URL=https://chakradhwajb.github.io/Espai-Barca/src/index.html"
+    />
   </head>
 </html>
